Decresse portrait size in dialog activity.

--- a/Client code/MobileSocial/res/layout/yg_dialoglist_item.xml
+++ b/Client code/MobileSocial/res/layout/yg_dialoglist_item.xml
@@ -28,12 +28,12 @@
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_friend_portrait"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="3dp"
             android:src="@drawable/yg_dialog_www" />
 
         <TextView
@@ -63,17 +63,18 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="3dp"
             android:layout_toRightOf="@id/yg_dialoglist_item_friend_portrait"
+            android:adjustViewBounds="true"
             android:background="@drawable/yg_dialog_chatfrom_bg"
             android:gravity="center_vertical"
-            android:visibility="gone"
-        	android:adjustViewBounds="true"
-        	android:maxWidth="150dp"
-        	android:maxHeight="200dp"/>
+            android:maxHeight="200dp"
+            android:maxWidth="150dp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_friend_audio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -81,8 +82,7 @@
             android:layout_toRightOf="@id/yg_dialoglist_item_friend_portrait"
             android:background="@drawable/friendvoice"
             android:gravity="center_vertical"
-            android:layout_centerVertical="true"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/yg_dialoglist_item_friend_audio_length"
@@ -110,12 +110,12 @@
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_my_portrait"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="3dp"
             android:src="@drawable/yg_dialog_www" />
 
         <TextView
@@ -145,17 +145,18 @@
             android:layout_marginRight="0dp"
             android:layout_marginTop="2dp"
             android:layout_toLeftOf="@id/yg_dialoglist_item_my_portrait"
+            android:adjustViewBounds="true"
             android:background="@drawable/yg_dialog_chatto_bg"
             android:gravity="center_vertical"
-            android:visibility="gone" 
-        	android:adjustViewBounds="true"
-        	android:maxWidth="150dp"
-        	android:maxHeight="200dp"/>
+            android:maxHeight="200dp"
+            android:maxWidth="150dp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_my_audio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="10dp"
@@ -163,9 +164,8 @@
             android:layout_toLeftOf="@id/yg_dialoglist_item_my_portrait"
             android:background="@drawable/myvoice"
             android:gravity="center_vertical"
-            android:layout_centerVertical="true"
             android:visibility="gone" />
-        
+
         <TextView
             android:id="@+id/yg_dialoglist_item_my_audio_length"
             android:layout_width="wrap_content"
