--- a/MaintainServer/Display/templates/home.html
+++ b/MaintainServer/Display/templates/home.html
@@ -12,33 +12,23 @@
     <script src='static/page/assets/javascripts/html5shiv.js' type='text/javascript'></script>
     <![endif]-->
     <link href='static/page/assets/stylesheets/bootstrap/bootstrap.css' media='all' rel='stylesheet' type='text/css'/>
-    <link href='static/page/assets/stylesheets/bootstrap/bootstrap-responsive.css' media='all' rel='stylesheet'
-          type='text/css'/>
+    <link href='static/page/assets/stylesheets/bootstrap/bootstrap-responsive.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / jquery ui -->
-    <link href='static/page/assets/stylesheets/jquery_ui/jquery-ui-1.10.0.custom.css' media='all' rel='stylesheet'
-          type='text/css'/>
-    <link href='static/page/assets/stylesheets/jquery_ui/jquery.ui.1.10.0.ie.css' media='all' rel='stylesheet'
-          type='text/css'/>
+    <link href='static/page/assets/stylesheets/jquery_ui/jquery-ui-1.10.0.custom.css' media='all' rel='stylesheet' type='text/css'/>
+    <link href='static/page/assets/stylesheets/jquery_ui/jquery.ui.1.10.0.ie.css' media='all' rel='stylesheet'  type='text/css'/>
     <!-- / switch buttons -->
-    <link href='static/page/assets/stylesheets/plugins/bootstrap_switch/bootstrap-switch.css' media='all'
-          rel='stylesheet' type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/bootstrap_switch/bootstrap-switch.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / xeditable -->
-    <link href='static/page/assets/stylesheets/plugins/xeditable/bootstrap-editable.css' media='all' rel='stylesheet'
-          type='text/css'/>
-    <link href='static/page/assets/stylesheets/plugins/common/bootstrap-wysihtml5.css' media='all' rel='stylesheet'
-          type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/xeditable/bootstrap-editable.css' media='all' rel='stylesheet' type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/common/bootstrap-wysihtml5.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / wysihtml5 (wysywig) -->
-    <link href='static/page/assets/stylesheets/plugins/common/bootstrap-wysihtml5.css' media='all' rel='stylesheet'
-          type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/common/bootstrap-wysihtml5.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / jquery file upload -->
-    <link href='static/page/assets/stylesheets/plugins/jquery_fileupload/jquery.fileupload-ui.css' media='all'
-          rel='stylesheet' type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/jquery_fileupload/jquery.fileupload-ui.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / full calendar -->
-    <link href='static/page/assets/stylesheets/plugins/fullcalendar/fullcalendar.css' media='all' rel='stylesheet'
-          type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/fullcalendar/fullcalendar.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / select2 -->
-    <link href='static/page/assets/stylesheets/plugins/select2/select2.css' media='all' rel='stylesheet'
-          type='text/css'/>
+    <link href='static/page/assets/stylesheets/plugins/select2/select2.css' media='all' rel='stylesheet' type='text/css'/>
     <!-- / mention -->
     <link href='static/page/assets/stylesheets/plugins/mention/mention.css' media='all' rel='stylesheet'
           type='text/css'/>
@@ -170,7 +160,7 @@
                 <li class='active'>
                     <a href='index.html'>
                         <i class='icon-dashboard'></i>
-                        <span>Dashboard</span>
+                        <span>主页</span>
                     </a>
                 </li>
                 <li class=''>
@@ -483,7 +473,7 @@
                     <div class='page-header'>
                         <h1 class='pull-left'>
                             <i class='icon-dashboard'></i>
-                            <span>Dashboard</span>
+                            <span>Mystery</span>
                         </h1>
 
                         <div class='pull-right'>
@@ -530,41 +520,11 @@
 
                     </div>
                     <hr class='hr-drouble'/>
-                    <div class='row-fluid'>
-                        <div class='span6 box'>
-                            <div class='box-header'>
-                                <div class='title'>
-                                    <i class='icon-inbox'></i>
-                                    Orders
-                                </div>
-                                <div class='actions'>
-                                    <a href="#" class="btn box-remove btn-mini btn-link"><i class='icon-remove'></i>
-                                    </a>
-                                    <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class='box-content'>
-                                <div id='stats-chart1'></div>
-                            </div>
-                        </div>
-                        <div class='span6 box'>
-                            <div class='box-header'>
-                                <div class='title'>
-                                    <i class='icon-group'></i>
-                                    Users
-                                </div>
-                                <div class='actions'>
-                                    <a href="#" class="btn box-remove btn-mini btn-link"><i class='icon-remove'></i>
-                                    </a>
-                                    <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class='box-content'>
-                                <div id='stats-chart2'></div>
-                            </div>
-                        </div>
+                    <div class='text-center'>
+                        <video width="1104" height="622"  autoplay="autoplay" loop="loop">
+                            <source src="static/video/video.mp4" type="video/mp4" >Mystery宣传视频</source>
+                            您的浏览器不支持video标签
+                        </video>
                     </div>
 
                     <div class='group-header'>
