--- a/MaintainServer/Display/templates/home.html
+++ b/MaintainServer/Display/templates/home.html
@@ -74,7 +74,7 @@
     <div class='navbar'>
         <div class='navbar-inner'>
             <div class='container-fluid'>
-                <a class='brand' href='index.html'>
+                <a class='brand' href=''>
                     <i class='icon-heart-empty'></i>
                     <span class='hidden-phone'>Mystery</span>
                 </a>
@@ -158,7 +158,7 @@
             </div>
             <ul class='nav nav-stacked'>
                 <li class='active'>
-                    <a href='index.html'>
+                    <a href=''>
                         <i class='icon-dashboard'></i>
                         <span>主页</span>
                     </a>
@@ -489,37 +489,7 @@
                         </div>
                     </div>
 
-                    <div class="row-fluid">
-
-                        <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
-                            <div class="boxchart-overlay blue">
-                                <div class="boxchart">5,6,7,2,0,4,2,4,8,2,3,3,2</div>
-                            </div>
-                            <span class="title">Clients</span>
-                            <span class="value">4 589</span>
-                        </div>
-
-                        <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
-                            <div class="boxchart-overlay red">
-                                <div class="boxchart">1,2,6,4,0,8,2,4,5,3,1,7,5</div>
-                            </div>
-                            <span class="title">Transactions</span>
-                            <span class="value">789</span>
-                        </div>
-                        <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
-                            <i class="icon-download-alt green"></i>
-                            <span class="title">下载量</span>
-                            <span class="value">3214</span>
-                        </div>
-
-                        <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
-                            <i class="icon-user yellow"></i>
-                            <span class="title">当前在线人数</span>
-                            <span class="value">34</span>
-                        </div>
-
-                    </div>
-                    <hr class='hr-drouble'/>
+                    
                     <div class='text-center'>
                         <video width="1104" height="622"  autoplay="autoplay" loop="loop">
                             <source src="static/video/video.mp4" type="video/mp4" >Mystery宣传视频</source>
@@ -531,10 +501,9 @@
                         <div class='row-fluid'>
                             <div class='span6 offset3'>
                                 <div class='text-center'>
-                                    <h2>Todo & Recent activity</h2>
-                                    <small class='muted'>Items in todo list can be reordered by drag & drop, you can
-                                        mark them as important, complete, or you can delete them!
-                                    </small>
+                                    <font size="6">
+                                        <a href="static/download/MobileSocial.apk" >点击这里下载APP</a>
+                                    </font>
                                 </div>
                             </div>
                         </div>
