Python Web: realtime

--- a/MaintainServer/Display/templates/Display/subview/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/subview/realtime_online.html
@@ -157,14 +157,14 @@
                 </form>
             </div>
             <ul class='nav nav-stacked'>
-                <li class='active'>
+                <li class=''>
                     <a href=''>
                         <i class='icon-dashboard'></i>
                         <span>主页</span>
                     </a>
                 </li>
-                <li class=''>
-                    <a href='subview?pageName=RealTimeOnline'>
+                <li class='active'>
+                    <a href='buttons_and_icons.html'>
                         <i class='icon-edit'></i>
                         <span>实时在线人数</span>
                     </a>
@@ -463,24 +463,6 @@
                     </div>
 
 
-                    <div class='text-center'>
-                        <video width="1104" height="622"  autoplay="autoplay" loop="loop">
-                            <source src="static/video/video.mp4" type="video/mp4" >Mystery宣传视频</source>
-                            您的浏览器不支持video标签
-                        </video>
-                    </div>
-
-                    <div class='group-header'>
-                        <div class='row-fluid'>
-                            <div class='span6 offset3'>
-                                <div class='text-center'>
-                                    <font size="6">
-                                        <a href="static/download/MobileSocial.apk" >点击这里下载APP</a>
-                                    </font>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
