Modify empty background at recent dialog activity.

--- a/Client code/MobileSocial/res/layout/activity_recent_dialog.xml
+++ b/Client code/MobileSocial/res/layout/activity_recent_dialog.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -10,7 +10,32 @@
         android:layout_height="fill_parent"
         android:background="#F0EFF5"
         android:divider="#DCDCDC"
-        android:dividerHeight="2px" >
+        android:dividerHeight="0.3dp" >
     </com.yg.ui.recentdialog.implementation.RecentDialogListView>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/yg_recent_dialog_empty_background"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#F0EFF5"
+        android:clickable="false"
+        android:focusable="false"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:src="@drawable/yg_recent_dialog_empty_message" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="暂时没有新消息"
+            android:textColor="#A6A6A6"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+</RelativeLayout>
