--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3.xml
@@ -20,14 +20,15 @@
         android:layout_marginTop="10dp"
         android:text="解密陌生人"
         android:textColor="@android:color/white"
-        android:textSize="13pt" />
+        android:textSize="13sp" />
 
     <Button
         android:id="@+id/loginguide_page3_signup_btn"
         style="@style/loginguide_page3_signup_btn_style"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
-        android:text="注册" />
+        android:text="注册"
+        android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,13 +37,15 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="30dp"
         android:text="已经有一个账号了?"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="13sp" />
 
     <Button
         android:id="@+id/loginguide_page3_login_btn"
         style="@style/loginguide_page3_login_btn_style"
         android:layout_gravity="center_horizontal"
         android:text="登陆"
-        android:textColor="#9FCFFF" />
+        android:textColor="#9FCFFF"
+        android:textSize="20sp" />
 
 </LinearLayout>
