--- a/MaintainServer/Display/templates/Display/charts/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/charts/realtime_online.html
@@ -1,14 +1,8 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Highcharts Example</title>
-
-		<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.2.min.js"></script>
-		<style type="text/css">
-${demo.css}
-		</style>
-		<script type="text/javascript">
+﻿<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.2.min.js"></script>
+<style type="text/css">
+    ${demo.css}
+</style>
+<script type="text/javascript">
 $(function () {
     $(document).ready(function () {
         Highcharts.setOptions({
@@ -43,7 +37,7 @@ $(function () {
                 }
             },
             title: {
-                text: 'Live random data'
+                text: '实时在线人数'
             },
             xAxis: {
                 type: 'datetime',
@@ -92,13 +86,6 @@ $(function () {
         });
     });
 });
-		</script>
-	</head>
-	<body>
-<script src="static/chart/js/highcharts.js"></script>
-<script src="static/chart/js/modules/exporting.js"></script>
 
+</script>
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-
-	</body>
-</html>
