--- a/MaintainServer/Display/templates/Display/subview/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/subview/realtime_online.html
@@ -1,173 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-    {% include 'Display/base/head_base.html' %}
-</head>
-<body class='contrast-red '>
-<header>
-    {% include 'Display/base/title_base.html' %}
-</header>
-<div id='wrapper'>
-    {% include 'Display/base/nav_base.html' %}
-    <section id='content'>
-        <div class='container-fluid'>
-            <div class='row-fluid' id='content-wrapper'>
-                <div class='span12'>
-                    <div class='page-header'>
-                        <h1 class='pull-left'>
-                            <i class='icon-dashboard'></i>
-                            <span>Mystery</span>
-                        </h1>
+{% extends 'Display/base/page_base.html' %}
+{% block content %}
+<div class="row-fluid">
 
-                        <div class='pull-right'>
-                            <div class='btn-group'>
-                                <a href="#" class="btn btn-white hidden-phone">Last month</a>
-                                <a href="#" class="btn btn-white">Last week</a>
-                                <a href="#" class="btn btn-white ">Today</a>
-                                <a href="#" class="btn btn-white" id="daterange"><i class='icon-calendar'></i>
-                                    <span class='hidden-phone'>Custom</span>
-                                    <b class='caret'></b>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
+    <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
+        <div class="boxchart-overlay blue">
+            <div class="boxchart">5,6,7,2,0,4,2,4,8,2,3,3,2</div>
         </div>
-    </section>
+        <span class="title">Clients</span>
+        <span class="value">4 589</span>
+    </div>
+
+    <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
+        <div class="boxchart-overlay red">
+            <div class="boxchart">1,2,6,4,0,8,2,4,5,3,1,7,5</div>
+        </div>
+        <span class="title">Transactions</span>
+        <span class="value">789</span>
+    </div>
+    <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
+        <i class="icon-download-alt green"></i>
+        <span class="title">下载量</span>
+        <span class="value">3214</span>
+    </div>
+
+    <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
+        <i class="icon-user yellow"></i>
+        <span class="title">当前在线人数</span>
+        <span class="value">34</span>
+    </div>
+
 </div>
-<!-- / jquery -->
-<script src='static/page/assets/javascripts/jquery/jquery.min.js' type='text/javascript'></script>
-<!-- / jquery mobile events (for touch and slide) -->
-<script src='static/page/assets/javascripts/plugins/mobile_events/jquery.mobile-events.min.js'
-        type='text/javascript'></script>
-<!-- / jquery migrate (for compatibility with new jquery) -->
-<script src='static/page/assets/javascripts/jquery/jquery-migrate.min.js' type='text/javascript'></script>
-<!-- / jquery ui -->
-<script src='static/page/assets/javascripts/jquery_ui/jquery-ui.min.js' type='text/javascript'></script>
-<!-- / bootstrap -->
-<script src='static/page/assets/javascripts/bootstrap/bootstrap.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/flot/excanvas.js' type='text/javascript'></script>
-<!-- / sparklines -->
-<script src='static/page/assets/javascripts/plugins/sparklines/jquery.sparkline.min.js' type='text/javascript'></script>
-<!-- / flot charts -->
-<script src='static/page/assets/javascripts/plugins/flot/flot.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/flot/flot.resize.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/flot/flot.pie.js' type='text/javascript'></script>
-<!-- / bootstrap switch -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_switch/bootstrapSwitch.min.js'
-        type='text/javascript'></script>
-<!-- / fullcalendar -->
-<script src='static/page/assets/javascripts/plugins/fullcalendar/fullcalendar.min.js' type='text/javascript'></script>
-<!-- / datatables -->
-<script src='static/page/assets/javascripts/plugins/datatables/jquery.dataTables.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/datatables/jquery.dataTables.columnFilter.js'
-        type='text/javascript'></script>
-<!-- / wysihtml5 -->
-<script src='static/page/assets/javascripts/plugins/common/wysihtml5.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/common/bootstrap-wysihtml5.js' type='text/javascript'></script>
-<!-- / select2 -->
-<script src='static/page/assets/javascripts/plugins/select2/select2.js' type='text/javascript'></script>
-<!-- / color picker -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_colorpicker/bootstrap-colorpicker.min.js'
-        type='text/javascript'></script>
-<!-- / mention -->
-<script src='static/page/assets/javascripts/plugins/mention/mention.min.js' type='text/javascript'></script>
-<!-- / input mask -->
-<script src='static/page/assets/javascripts/plugins/input_mask/bootstrap-inputmask.min.js'
-        type='text/javascript'></script>
-<!-- / fileinput -->
-<script src='static/page/assets/javascripts/plugins/fileinput/bootstrap-fileinput.js' type='text/javascript'></script>
-<!-- / modernizr -->
-<script src='static/page/assets/javascripts/plugins/modernizr/modernizr.min.js' type='text/javascript'></script>
-<!-- / retina -->
-<script src='static/page/assets/javascripts/plugins/retina/retina.js' type='text/javascript'></script>
-<!-- / fileupload -->
-<script src='static/page/assets/javascripts/plugins/fileupload/tmpl.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/load-image.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/canvas-to-blob.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.iframe-transport.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload-fp.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload-ui.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload-init.js'
-        type='text/javascript'></script>
-<!-- / timeago -->
-<script src='static/page/assets/javascripts/plugins/timeago/jquery.timeago.js' type='text/javascript'></script>
-<!-- / slimscroll -->
-<script src='static/page/assets/javascripts/plugins/slimscroll/jquery.slimscroll.min.js'
-        type='text/javascript'></script>
-<!-- / autosize (for textareas) -->
-<script src='static/page/assets/javascripts/plugins/autosize/jquery.autosize-min.js' type='text/javascript'></script>
-<!-- / charCount -->
-<script src='static/page/assets/javascripts/plugins/charCount/charCount.js' type='text/javascript'></script>
-<!-- / validate -->
-<script src='static/page/assets/javascripts/plugins/validate/jquery.validate.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/validate/additional-methods.js' type='text/javascript'></script>
-<!-- / naked password -->
-<script src='static/page/assets/javascripts/plugins/naked_password/naked_password-0.2.4.min.js'
-        type='text/javascript'></script>
-<!-- / nestable -->
-<script src='static/page/assets/javascripts/plugins/nestable/jquery.nestable.js' type='text/javascript'></script>
-<!-- / tabdrop -->
-<script src='static/page/assets/javascripts/plugins/tabdrop/bootstrap-tabdrop.js' type='text/javascript'></script>
-<!-- / jgrowl -->
-<script src='static/page/assets/javascripts/plugins/jgrowl/jquery.jgrowl.min.js' type='text/javascript'></script>
-<!-- / bootbox -->
-<script src='static/page/assets/javascripts/plugins/bootbox/bootbox.min.js' type='text/javascript'></script>
-<!-- / inplace editing -->
-<script src='static/page/assets/javascripts/plugins/xeditable/bootstrap-editable.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/xeditable/wysihtml5.js' type='text/javascript'></script>
-<!-- / ckeditor -->
-<script src='static/page/assets/javascripts/plugins/ckeditor/ckeditor.js' type='text/javascript'></script>
-<!-- / filetrees -->
-<script src='static/page/assets/javascripts/plugins/dynatree/jquery.dynatree.min.js' type='text/javascript'></script>
-<!-- / datetime picker -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_datetimepicker/bootstrap-datetimepicker.js'
-        type='text/javascript'></script>
-<!-- / daterange picker -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_daterangepicker/moment.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/bootstrap_daterangepicker/bootstrap-daterangepicker.js'
-        type='text/javascript'></script>
-<!-- / max length -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_maxlength/bootstrap-maxlength.min.js'
-        type='text/javascript'></script>
-<!-- / dropdown hover -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_hover_dropdown/twitter-bootstrap-hover-dropdown.min.js'
-        type='text/javascript'></script>
-<!-- / slider nav (address book) -->
-<script src='static/page/assets/javascripts/plugins/slider_nav/slidernav-min.js' type='text/javascript'></script>
-<!-- / fuelux -->
-<script src='static/page/assets/javascripts/plugins/fuelux/wizard.js' type='text/javascript'></script>
-<!-- / flatty theme -->
-<script src='static/page/assets/javascripts/nav.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/tables.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/theme.js' type='text/javascript'></script>
-<!-- / demo -->
-<script src='static/page/assets/javascripts/demo/jquery.mockjax.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/demo/inplace_editing.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/demo/charts.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/demo/demo.js' type='text/javascript'></script>'
-
-
-
-
-
-
-		<script src="static/page/picture/js/jquery.placeholder.min.js"></script>
-		<script src="static/page/picture/js/core.min.js"></script>
-
-<div style="display:none">
-    <script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script>
-</div>
-</body>
-</html>
+{% include 'Display/charts/realtime_online.html' %}
+{% endblock %}
