--- a/MaintainServer/Display/templates/home.html
+++ b/MaintainServer/Display/templates/home.html
@@ -1,168 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    {% include 'Display/base/head_base.html' %}
-</head>
-<body class='contrast-red '>
-<header>
-    {% include 'Display/base/title_base.html' %}
-</header>
-<div id='wrapper'>
-    {% include 'Display/base/nav_base.html' %}
-    <section id='content'>
-        <div class='container-fluid'>
-            <div class='row-fluid' id='content-wrapper'>
-                <div class='span12'>
-                    {% include 'Display/base/sec_title_base.html' %}
+{% extends 'Display/base/page_base.html' %}
 
+{% block content %}
+<div class='text-center'>
+    <video width="1104" height="622"  autoplay="autoplay" loop="loop">
+        <source src="static/video/video.mp4" type="video/mp4" >Mystery宣传视频</source>
+        您的浏览器不支持video标签
+    </video>
+</div>
 
-                    <div class='text-center'>
-                        <video width="1104" height="622"  autoplay="autoplay" loop="loop">
-                            <source src="static/video/video.mp4" type="video/mp4" >Mystery宣传视频</source>
-                            您的浏览器不支持video标签
-                        </video>
-                    </div>
-
-                    <div class='group-header'>
-                        <div class='row-fluid'>
-                            <div class='span6 offset3'>
-                                <div class='text-center'>
-                                    <font size="6">
-                                        <a href="static/download/MobileSocial.apk" >点击这里下载APP</a>
-                                    </font>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div class='group-header'>
+    <div class='row-fluid'>
+        <div class='span6 offset3'>
+            <div class='text-center'>
+                <font size="6">
+                    <a href="static/download/MobileSocial.apk" >点击这里下载APP</a>
+                </font>
             </div>
         </div>
-    </section>
+    </div>
 </div>
-<!-- / jquery -->
-<script src='static/page/assets/javascripts/jquery/jquery.min.js' type='text/javascript'></script>
-<!-- / jquery mobile events (for touch and slide) -->
-<script src='static/page/assets/javascripts/plugins/mobile_events/jquery.mobile-events.min.js'
-        type='text/javascript'></script>
-<!-- / jquery migrate (for compatibility with new jquery) -->
-<script src='static/page/assets/javascripts/jquery/jquery-migrate.min.js' type='text/javascript'></script>
-<!-- / jquery ui -->
-<script src='static/page/assets/javascripts/jquery_ui/jquery-ui.min.js' type='text/javascript'></script>
-<!-- / bootstrap -->
-<script src='static/page/assets/javascripts/bootstrap/bootstrap.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/flot/excanvas.js' type='text/javascript'></script>
-<!-- / sparklines -->
-<script src='static/page/assets/javascripts/plugins/sparklines/jquery.sparkline.min.js' type='text/javascript'></script>
-<!-- / flot charts -->
-<script src='static/page/assets/javascripts/plugins/flot/flot.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/flot/flot.resize.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/flot/flot.pie.js' type='text/javascript'></script>
-<!-- / bootstrap switch -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_switch/bootstrapSwitch.min.js'
-        type='text/javascript'></script>
-<!-- / fullcalendar -->
-<script src='static/page/assets/javascripts/plugins/fullcalendar/fullcalendar.min.js' type='text/javascript'></script>
-<!-- / datatables -->
-<script src='static/page/assets/javascripts/plugins/datatables/jquery.dataTables.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/datatables/jquery.dataTables.columnFilter.js'
-        type='text/javascript'></script>
-<!-- / wysihtml5 -->
-<script src='static/page/assets/javascripts/plugins/common/wysihtml5.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/common/bootstrap-wysihtml5.js' type='text/javascript'></script>
-<!-- / select2 -->
-<script src='static/page/assets/javascripts/plugins/select2/select2.js' type='text/javascript'></script>
-<!-- / color picker -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_colorpicker/bootstrap-colorpicker.min.js'
-        type='text/javascript'></script>
-<!-- / mention -->
-<script src='static/page/assets/javascripts/plugins/mention/mention.min.js' type='text/javascript'></script>
-<!-- / input mask -->
-<script src='static/page/assets/javascripts/plugins/input_mask/bootstrap-inputmask.min.js'
-        type='text/javascript'></script>
-<!-- / fileinput -->
-<script src='static/page/assets/javascripts/plugins/fileinput/bootstrap-fileinput.js' type='text/javascript'></script>
-<!-- / modernizr -->
-<script src='static/page/assets/javascripts/plugins/modernizr/modernizr.min.js' type='text/javascript'></script>
-<!-- / retina -->
-<script src='static/page/assets/javascripts/plugins/retina/retina.js' type='text/javascript'></script>
-<!-- / fileupload -->
-<script src='static/page/assets/javascripts/plugins/fileupload/tmpl.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/load-image.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/canvas-to-blob.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.iframe-transport.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload-fp.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload-ui.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/fileupload/jquery.fileupload-init.js'
-        type='text/javascript'></script>
-<!-- / timeago -->
-<script src='static/page/assets/javascripts/plugins/timeago/jquery.timeago.js' type='text/javascript'></script>
-<!-- / slimscroll -->
-<script src='static/page/assets/javascripts/plugins/slimscroll/jquery.slimscroll.min.js'
-        type='text/javascript'></script>
-<!-- / autosize (for textareas) -->
-<script src='static/page/assets/javascripts/plugins/autosize/jquery.autosize-min.js' type='text/javascript'></script>
-<!-- / charCount -->
-<script src='static/page/assets/javascripts/plugins/charCount/charCount.js' type='text/javascript'></script>
-<!-- / validate -->
-<script src='static/page/assets/javascripts/plugins/validate/jquery.validate.min.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/validate/additional-methods.js' type='text/javascript'></script>
-<!-- / naked password -->
-<script src='static/page/assets/javascripts/plugins/naked_password/naked_password-0.2.4.min.js'
-        type='text/javascript'></script>
-<!-- / nestable -->
-<script src='static/page/assets/javascripts/plugins/nestable/jquery.nestable.js' type='text/javascript'></script>
-<!-- / tabdrop -->
-<script src='static/page/assets/javascripts/plugins/tabdrop/bootstrap-tabdrop.js' type='text/javascript'></script>
-<!-- / jgrowl -->
-<script src='static/page/assets/javascripts/plugins/jgrowl/jquery.jgrowl.min.js' type='text/javascript'></script>
-<!-- / bootbox -->
-<script src='static/page/assets/javascripts/plugins/bootbox/bootbox.min.js' type='text/javascript'></script>
-<!-- / inplace editing -->
-<script src='static/page/assets/javascripts/plugins/xeditable/bootstrap-editable.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/xeditable/wysihtml5.js' type='text/javascript'></script>
-<!-- / ckeditor -->
-<script src='static/page/assets/javascripts/plugins/ckeditor/ckeditor.js' type='text/javascript'></script>
-<!-- / filetrees -->
-<script src='static/page/assets/javascripts/plugins/dynatree/jquery.dynatree.min.js' type='text/javascript'></script>
-<!-- / datetime picker -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_datetimepicker/bootstrap-datetimepicker.js'
-        type='text/javascript'></script>
-<!-- / daterange picker -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_daterangepicker/moment.min.js'
-        type='text/javascript'></script>
-<script src='static/page/assets/javascripts/plugins/bootstrap_daterangepicker/bootstrap-daterangepicker.js'
-        type='text/javascript'></script>
-<!-- / max length -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_maxlength/bootstrap-maxlength.min.js'
-        type='text/javascript'></script>
-<!-- / dropdown hover -->
-<script src='static/page/assets/javascripts/plugins/bootstrap_hover_dropdown/twitter-bootstrap-hover-dropdown.min.js'
-        type='text/javascript'></script>
-<!-- / slider nav (address book) -->
-<script src='static/page/assets/javascripts/plugins/slider_nav/slidernav-min.js' type='text/javascript'></script>
-<!-- / fuelux -->
-<script src='static/page/assets/javascripts/plugins/fuelux/wizard.js' type='text/javascript'></script>
-<!-- / flatty theme -->
-<script src='static/page/assets/javascripts/nav.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/tables.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/theme.js' type='text/javascript'></script>
-<!-- / demo -->
-<script src='static/page/assets/javascripts/demo/jquery.mockjax.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/demo/inplace_editing.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/demo/charts.js' type='text/javascript'></script>
-<script src='static/page/assets/javascripts/demo/demo.js' type='text/javascript'></script>'
-<script src="static/page/picture/js/jquery.placeholder.min.js"></script>
-<script src="static/page/picture/js/core.min.js"></script>
-
-<div style="display:none">
-    <script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script>
-</div>
-</body>
-</html>
+{% endblock %}
