--- a/MaintainServer/Display/templates/Display/subview/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/subview/realtime_online.html
@@ -26,7 +26,7 @@
     <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
         <i class="icon-user yellow"></i>
         <span class="title">当前在线人数</span>
-        <span class="value">34</span>
+        <span class="value" id="realtime_online_num">34</span>
     </div>
 
 </div>
