--- a/Client code/MobileSocial/res/layout/yg_dialoglist_item.xml
+++ b/Client code/MobileSocial/res/layout/yg_dialoglist_item.xml
@@ -72,15 +72,15 @@
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_friend_audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="42dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="0dp"
             android:layout_marginTop="3dp"
             android:layout_toRightOf="@id/yg_dialoglist_item_friend_portrait"
-            android:background="@drawable/friendvoice"
+            android:background="@drawable/yg_dialog_activity_friend_voice_norm"
             android:gravity="center_vertical"
             android:visibility="gone" />
 
@@ -89,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="4dp"
             android:layout_toRightOf="@id/yg_dialoglist_item_friend_audio"
             android:background="@android:color/transparent"
             android:clickable="false"
@@ -154,15 +155,15 @@
 
         <ImageView
             android:id="@+id/yg_dialoglist_item_my_audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="42dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="2dp"
             android:layout_toLeftOf="@id/yg_dialoglist_item_my_portrait"
-            android:background="@drawable/myvoice"
+            android:background="@drawable/yg_dialog_activity_my_voice_norm"
             android:gravity="center_vertical"
             android:visibility="gone" />
 
@@ -171,6 +172,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginRight="3dp"
             android:layout_toLeftOf="@id/yg_dialoglist_item_my_audio"
             android:background="@android:color/transparent"
             android:clickable="false"
