--- a/MaintainServer/Display/templates/Display/subview/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/subview/realtime_online.html
@@ -20,15 +20,15 @@
     <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
         <i class="icon-download-alt green"></i>
         <span class="title">下载量</span>
-        <span class="value">3214</span>
+        <span class="value" id="download_num"></span>
     </div>
 
     <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
         <i class="icon-user yellow"></i>
         <span class="title">当前在线人数</span>
-        <span class="value" id="realtime_online_num">34</span>
+        <span class="value" id="realtime_online_num"></span>
     </div>
 
 </div>
-{% include 'Display/charts/realtime_online.html' %}
+{% include 'Display/charts/realtime_online_chart.html' %}
 {% endblock %}
