--- a/MaintainServer/Display/templates/Display/subview/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/subview/realtime_online.html
@@ -1,34 +1,5 @@
 {% extends 'Display/base/page_base.html' %}
 {% block content %}
-<div class="row-fluid">
-
-    <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
-        <div class="boxchart-overlay blue">
-            <div class="boxchart">5,6,7,2,0,4,2,4,8,2,3,3,2</div>
-        </div>
-        <span class="title">Clients</span>
-        <span class="value">4 589</span>
-    </div>
-
-    <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
-        <div class="boxchart-overlay red">
-            <div class="boxchart">1,2,6,4,0,8,2,4,5,3,1,7,5</div>
-        </div>
-        <span class="title">Transactions</span>
-        <span class="value">789</span>
-    </div>
-    <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
-        <i class="icon-download-alt green"></i>
-        <span class="title">下载量</span>
-        <span class="value" id="download_num"></span>
-    </div>
-
-    <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
-        <i class="icon-user yellow"></i>
-        <span class="title">当前在线人数</span>
-        <span class="value" id="realtime_online_num"></span>
-    </div>
-
-</div>
+{% include 'Display/base/online_num_base.html' %}
 {% include 'Display/charts/realtime_online_chart.html' %}
 {% endblock %}
