Python Web: change title href

--- a/MaintainServer/Display/templates/Display/base/title_base.html
+++ b/MaintainServer/Display/templates/Display/base/title_base.html
@@ -1,7 +1,7 @@
 <div class='navbar'>
     <div class='navbar-inner'>
         <div class='container-fluid'>
-            <a class='brand' href=''>
+            <a class='brand' href='/'>
                 <i class='icon-heart-empty'></i>
                 <span class='hidden-phone'>Mystery</span>
             </a>
