Python Web: finish per hour online num page

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -8,13 +8,13 @@
                 </a>
             </li>
 
-            <li>
+            <li class="{{online_active}}">
                 <a class='dropdown-collapse ' href='#'>
                     <i class='icon-edit'></i>
                     <span>在线人数</span>
                     <i class='icon-angle-down angle-down'></i>
                 </a>
-                <ul class='nav nav-stacked'>
+                <ul class="{{online_stack}}">
                     <li class={{realtimeonline_active}}>
                         <a href='subview?pageName=RealTimeOnline'>
                             <i class='icon-caret-right'></i>
