Python Web: Add sex statistics page

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -29,23 +29,17 @@
                     </li>
                 </ul>
             </li>
-            <li class=''>
-                <a href='buttons_and_icons.html'>
-                    <i class='icon-star'></i>
-                    <span>Buttons & Icons</span>
-                </a>
-            </li>
-            <li>
+            <li class="{{statistics_active}}">
                 <a class='dropdown-collapse ' href='#'>
                     <i class='icon-cogs'></i>
-                    <span>Components</span>
+                    <span>累计统计</span>
                     <i class='icon-angle-down angle-down'></i>
                 </a>
-                <ul class='nav nav-stacked'>
-                    <li class=''>
-                        <a href='charts.html'>
+                <ul class="{{statistics_stack}}">
+                    <li class={{sex_active}}>
+                        <a href='subview?pageName=SexStatistics'>
                             <i class='icon-bar-chart'></i>
-                            <span>Charts</span>
+                            <span>性别统计</span>
                         </a>
                     </li>
                     <li class=''>
