Python Web: map distribution page

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -42,10 +42,10 @@
                             <span>性别统计</span>
                         </a>
                     </li>
-                    <li class=''>
-                        <a href='address_book.html'>
+                    <li class={{map_active}}>
+                        <a href='subview?pageName=MapDistribution'>
                             <i class='icon-envelope'></i>
-                            <span>Address book</span>
+                            <span>地域分布</span>
                         </a>
                     </li>
                     <li class=''>
