--- a/MaintainServer/Display/templates/Display/base/page_base.html
+++ b/MaintainServer/Display/templates/Display/base/page_base.html
@@ -110,8 +110,11 @@
 
 
 
-<script src="static/chart/js/highcharts.js"></script>
-<script src="static/chart/js/modules/exporting.js"></script>
+
+
+{% block footer %}
+{% endblock%}
+
 
 <div style="display:none">
     <script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script>
