--- a/MaintainServer/Display/templates/Display/subview/perhour_online.html
+++ b/MaintainServer/Display/templates/Display/subview/perhour_online.html
@@ -2,3 +2,8 @@
 {% block content %}
 {% include 'Display/charts/perhour_online_chart.html' %}
 {% endblock %}
+
+{% block footer %}
+<script src="static/chart/js/highcharts.js"></script>
+<script src="static/chart/js/modules/exporting.js"></script>
+{% endblock%}
