--- a/MaintainServer/Display/templates/Display/subview/realtime_online.html
+++ b/MaintainServer/Display/templates/Display/subview/realtime_online.html
@@ -3,3 +3,8 @@
 {% include 'Display/base/online_num_base.html' %}
 {% include 'Display/charts/realtime_online_chart.html' %}
 {% endblock %}
+
+{% block footer %}
+<script src="static/chart/js/highcharts.js"></script>
+<script src="static/chart/js/modules/exporting.js"></script>
+{% endblock%}
