--- a/MaintainServer/Display/templates/Display/subview/sexstatistics.html
+++ b/MaintainServer/Display/templates/Display/subview/sexstatistics.html
@@ -2,3 +2,9 @@
 {% block content %}
 {% include 'Display/charts/sexstatistics_chart.html' %}
 {% endblock %}
+
+
+{% block footer %}
+<script src="static/chart/js/highcharts.js"></script>
+<script src="static/chart/js/modules/exporting.js"></script>
+{% endblock%}
