Python Web: bug fix map

--- a/MaintainServer/Display/templates/Display/charts/mapdistribution_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/mapdistribution_chart.html
@@ -129,7 +129,7 @@ $(function () {
             "value": 7
         },
         {
-            "hc-key": "cn-jx",江西
+            "hc-key": "cn-jx",//江西
             "value": 72
         }
     ];
