Python Web: make map js file and jquery-1.8.2.min.js to local file

--- a/MaintainServer/Display/templates/Display/subview/mapdistribution.html
+++ b/MaintainServer/Display/templates/Display/subview/mapdistribution.html
@@ -6,5 +6,5 @@
 {% block footer %}
 <script src="static/chart/js/modules/exporting.js"></script>
 <script src="static/chart/js/highmaps.js"></script>
-<script src="http://code.highcharts.com/mapdata/countries/cn/custom/cn-all-sar-taiwan.js"></script>
+<script src="static/chart/js/cn-all-sar-taiwan.js"></script>
 {% endblock%}
