--- a/MaintainServer/Display/templates/Display/charts/perhour_online_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/perhour_online_chart.html
@@ -1,5 +1,5 @@
 <script type="text/javascript"
-        src="http://cdn.hcharts.cn/jquery/jquery-1.8.2.min.js"></script>
+        src="static/chart/js/jquery-1.8.2.min.js"></script>
 <style type="text/css">
     ${
     demo
