--- a/MaintainServer/Display/templates/Display/charts/realtime_online_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/realtime_online_chart.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="static/chart/js/jquery-1.8.2.min.js"></script>
 <style type="text/css">
     ${demo.css}
 </style>
