Python Web: register year chart page

--- a/MaintainServer/Display/templates/Display/charts/register_month_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/register_month_chart.html
@@ -67,10 +67,10 @@ $(function () {
             }
         },
         series: [{
-            name: '本日注册人数（男）',
+            name: '本月注册人数（男）',
             data: registermonth_dict.male
         }, {
-            name: '本日注册人数（女）',
+            name: '本月注册人数（女）',
             data: registermonth_dict.female
         }]
     });
