--- a/MaintainServer/Display/templates/Display/charts/register_year_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/register_year_chart.html
@@ -7,21 +7,19 @@
     }
 </style>
 <script type="text/javascript">
-var registermonth_dict = {{registermonth_dict|safe}}
+var registeryear_dict = {{registeryear_dict|safe}}
 $(function () {
     $('#container').highcharts({
         chart: {
             type: 'column'
         },
         title: {
-            text: '本月注册人数'
+            text: '本年注册人数'
         },
         xAxis: {
-            categories:  ['1号', '2号', '3号', '4号', '5号', '6号'
-            				, '7号', '8号', '9号', '10号', '11号', '12号'
-            				, '13号', '14号', '15号', '16号', '17号', '18号'
-            				, '19号', '20号', '21号', '22号', '23号', '24号'
-            				, '25号', '26号', '27号', '28号', '29号', '30号', '31号']
+            categories:  [ '1月', '2月', '3月',
+										'4月', '5月', '6月', '7月', '8月',
+										'9月', '10月', '11月' ,'12月']
         },
         yAxis: {
             min: 0,
@@ -67,11 +65,11 @@ $(function () {
             }
         },
         series: [{
-            name: '本日注册人数（男）',
-            data: registermonth_dict.male
+            name: '本年注册人数（男）',
+            data: registeryear_dict.male
         }, {
-            name: '本日注册人数（女）',
-            data: registermonth_dict.female
+            name: '本年注册人数（女）',
+            data: registeryear_dict.female
         }]
     });
 });
