Python Web: zombie return page

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -54,10 +54,10 @@
                             <span>新注册人数统计</span>
                         </a>
                     </li>
-                    <li class=''>
-                        <a href='inplace_editing.html'>
+                    <li class={{zombiereturn_active}}>
+                        <a href='subview?pageName=ZombieReturnDayPage'>
                             <i class='icon-pencil'></i>
-                            <span>In-place editing</span>
+                            <span>僵尸用户回归人数统计</span>
                         </a>
                     </li>
                     <li class=''>
