Python Web: Age distribution page

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -42,6 +42,12 @@
                             <span>性别统计</span>
                         </a>
                     </li>
+                    <li class={{age_active}}>
+                        <a href='subview?pageName=AgeDistribution'>
+                            <i class='icon-list-ul'></i>
+                            <span>年龄分布</span>
+                        </a>
+                    </li>
                     <li class={{map_active}}>
                         <a href='subview?pageName=MapDistribution'>
                             <i class='icon-envelope'></i>
@@ -58,12 +64,6 @@
                         <a href='subview?pageName=ZombieReturnDayPage'>
                             <i class='icon-pencil'></i>
                             <span>僵尸用户回归人数统计</span>
-                        </a>
-                    </li>
-                    <li class=''>
-                        <a href='filetrees.html'>
-                            <i class='icon-list-ul'></i>
-                            <span>File trees</span>
                         </a>
                     </li>
                     <li class=''>
