Python Web: sex distribution tooltips num

--- a/MaintainServer/Display/templates/Display/charts/sexstatistics_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/sexstatistics_chart.html
@@ -16,7 +16,7 @@ $(function () {
             text: '性别分布'
         },
         tooltip: {
-            pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            pointFormat: '{series.name}: <b>{point.percentage:.1f}%<br>人数：{point.y}</b>'
         },
         plotOptions: {
             pie: {
