--- a/MaintainServer/Display/templates/Display/base/online_num_base.html
+++ b/MaintainServer/Display/templates/Display/base/online_num_base.html
@@ -12,8 +12,8 @@
         <div class="boxchart-overlay red">
             <div class="boxchart">1,2,6,4,0,8,2,4,5,3,1,7,5</div>
         </div>
-        <span class="title">Transactions</span>
-        <span class="value">789</span>
+        <span class="title">历史最高在线人数</span>
+        <span class="value" id="max_num"></span>
     </div>
     <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
         <i class="icon-download-alt green"></i>
