Python Web: Change web style

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -3,27 +3,27 @@
         <ul class='nav nav-stacked'>
             <li class={{home_active}}>
                 <a href='/'>
-                    <i class='icon-dashboard'></i>
+                    <i class='icon-home'></i>
                     <span>主页</span>
                 </a>
             </li>
 
             <li class="{{online_active}}">
                 <a class='dropdown-collapse ' href='#'>
-                    <i class='icon-edit'></i>
+                    <i class='icon-mobile-phone'></i>
                     <span>在线人数</span>
                     <i class='icon-angle-down angle-down'></i>
                 </a>
                 <ul class="{{online_stack}}">
                     <li class={{realtimeonline_active}}>
                         <a href='subview?pageName=RealTimeOnline'>
-                            <i class='icon-caret-right'></i>
+                            <i class='icon-group'></i>
                             <span>实时在线人数</span>
                         </a>
                     </li>
                     <li class={{perhouronline_active}}>
                         <a href='subview?pageName=PerHourOnline'>
-                            <i class='icon-caret-right'></i>
+                            <i class='icon-h-sign'></i>
                             <span>每小时在线人数</span>
                         </a>
                     </li>
@@ -31,38 +31,38 @@
             </li>
             <li class="{{statistics_active}}">
                 <a class='dropdown-collapse ' href='#'>
-                    <i class='icon-cogs'></i>
+                    <i class='icon-bar-chart'></i>
                     <span>累计统计</span>
                     <i class='icon-angle-down angle-down'></i>
                 </a>
                 <ul class="{{statistics_stack}}">
                     <li class={{sex_active}}>
                         <a href='subview?pageName=SexStatistics'>
-                            <i class='icon-bar-chart'></i>
+                            <i class='icon-user'></i>
                             <span>性别统计</span>
                         </a>
                     </li>
                     <li class={{age_active}}>
                         <a href='subview?pageName=AgeDistribution'>
-                            <i class='icon-list-ul'></i>
+                            <i class='icon-time'></i>
                             <span>年龄分布</span>
                         </a>
                     </li>
                     <li class={{map_active}}>
                         <a href='subview?pageName=MapDistribution'>
-                            <i class='icon-envelope'></i>
+                            <i class='icon-map-marker'></i>
                             <span>地域分布</span>
                         </a>
                     </li>
                     <li class={{register_active}}>
                         <a href='subview?pageName=RegisterDayPage'>
-                            <i class='icon-comments'></i>
+                            <i class='icon-smile'></i>
                             <span>新注册人数统计</span>
                         </a>
                     </li>
                     <li class={{zombiereturn_active}}>
                         <a href='subview?pageName=ZombieReturnDayPage'>
-                            <i class='icon-pencil'></i>
+                            <i class='icon-meh'></i>
                             <span>僵尸用户回归人数统计</span>
                         </a>
                     </li>
