--- a/MaintainServer/Display/templates/Display/base/title_base.html
+++ b/MaintainServer/Display/templates/Display/base/title_base.html
@@ -16,8 +16,8 @@
                     <ul class='dropdown-menu color-settings'>
                         <li class='color-settings-contrast-color'>
                             <div class='color-title'>Contrast color</div>
-                            <a href="#" data-change-to="contrast-red"><i class='icon-adjust text-red'></i>
-                                Red
+                            <a href="#" data-change-to="contrast-blue"><i class='icon-adjust text-blue'></i>
+                                Blue
                                 <small>(default)</small>
                             </a>
                             <a href="#" data-change-to="contrast-blue"><i class='icon-adjust text-blue'></i>
