--- a/MaintainServer/Display/templates/Display/charts/register_month_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/register_month_chart.html
@@ -66,6 +66,7 @@ $(function () {
                 }
             }
         },
+        colors:['#0099ff','#ff6666'],
         series: [{
             name: '本月注册人数（男）',
             data: registermonth_dict.male
