--- a/MaintainServer/Display/templates/Display/charts/sexstatistics_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/sexstatistics_chart.html
@@ -34,6 +34,7 @@ $(function () {
         series: [{
             name: "性别分布",
             colorByPoint: true,
+            colors:['#0099ff','#ff6666'],
             data: [{
                 name: "男",
                 y: dict.male
