--- a/MaintainServer/Display/templates/Display/charts/zombie_return_day_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/zombie_return_day_chart.html
@@ -66,6 +66,7 @@ $(function () {
                 }
             }
         },
+        colors:['#0099ff','#ff6666'],
         series: [{
             name: '本日僵尸用户回归人数（男）',
             data: zombiereturn_day_dict.male
