--- a/MaintainServer/Display/templates/Display/charts/zombie_return_year_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/zombie_return_year_chart.html
@@ -64,6 +64,7 @@ $(function () {
                 }
             }
         },
+        colors:['#0099ff','#ff6666'],
         series: [{
             name: '本年注册人数（男）',
             data: zombiereturn_year_dict.male
