Python Web: Change default theme color to blut

--- a/MaintainServer/Display/templates/Display/base/page_base.html
+++ b/MaintainServer/Display/templates/Display/base/page_base.html
@@ -3,7 +3,7 @@
 <head>
     {% include 'Display/base/head_base.html' %}
 </head>
-<body class='contrast-red '>
+<body class='contrast-blue '>
 <header>
     {% include 'Display/base/title_base.html' %}
 </header>
