--- a/MaintainServer/Display/templates/Display/base/title_base.html
+++ b/MaintainServer/Display/templates/Display/base/title_base.html
@@ -20,8 +20,8 @@
                                 Blue
                                 <small>(default)</small>
                             </a>
-                            <a href="#" data-change-to="contrast-blue"><i class='icon-adjust text-blue'></i>
-                                Blue
+                            <a href="#" data-change-to="contrast-red"><i class='icon-adjust text-red'></i>
+                                Red
                             </a>
                             <a href="#" data-change-to="contrast-orange"><i class='icon-adjust text-orange'></i>
                                 Orange
